--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
 
 <header>
-    <img src="C:\Users\USER\Desktop\MBEYU WEB PROJECT\photo 1.jpeg" alt="Header Image">
+    <img src="photo 1.jpeg" alt="Header Image">
     <h1>My Personal Portfolio</h1>
 </header>
 
@@ -101,6 +101,23 @@
 <header><section id="about">
     <h2 style="color: #121213;">About Me</h2></header>
     <h3>Profile</h3>
+    <div class="profile-picture">
+      <style>  .profile-picture {
+    width: 150px; /* Adjust size as needed */
+    height: 150px; /* Adjust size as needed */
+    border-radius: 50%; /* Makes the image circular */
+    overflow: hidden; /* Hides overflow outside the circle */
+}
+
+.profile-picture img {
+    width: 100%; /* Ensures the image fills the container */
+    height: auto; /* Maintains aspect ratio */
+    display: block; /* Removes extra space */
+}</style>
+
+    <img src="profile photo.jpg" alt="Profile Picture">
+</div>
+
     <p>I am a passionate web developer...</p>
     <p>I have skills in dfferent fields which includes:</p>
 
