--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 
     <img src="profile photo.jpg" alt="Profile Picture">
 </div>
+<h2>Personal Infromation</h2>
+    
 
     <p>I am a passionate web developer...</p>
     <p>I have skills in dfferent fields which includes:</p>
