--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 <p>This project has a linked  Online bus n=booking system to enable user bookfrom any remote loaction, make paymentand print the booking slip.<br> Tje booking slip contains the details of the booking made. <br>Take a step and Book!! See you!! </p>
 
 
-<a href="C:\Users\USER\Desktop\MBEYU WEB PROJECT\booking system.html">Book Now</a>
+<a href="booking system.html">Book Now</a>
 
 <header><section id="contact">
     <h2 style="color: #272325;">Contact Me</h2></header>
