--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@
 
 
 <a href="booking system.html">Book Now</a>
-
+You can also go ahead a and view the bust booking project interface in details below,<br>
+    The Interface is user friendly.
+   <b></b> <a href="bus booking in details">View In Deatils</a></b>
 <header><section id="contact">
     <h2 style="color: #272325;">Contact Me</h2></header>
     <p> You can Also Contact me Directly Throuh:<br></p>
