--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
 </script>
 </section>
 <h2>2. Online Bus Booking System</h2>
-<p>This project has a linked  Online bus n=booking system to enable user bookfrom any remote loaction, make paymentand print the booking slip.<br> Tje booking slip contains the details of the booking made. <br>Take a step and Book!! See you!! </p>
+<p>This project has a linked  Online bus booking system to enable user bookfrom any remote loaction, make payment and print the booking slip.<br> Tje booking slip contains the details of the booking made. <br>Take a step and Book!! See you!! </p>
 
 
 <a href="booking system.html">Book Now</a>
 You can also go ahead a and view the bust booking project interface in details below,<br>
     The Interface is user friendly.
-   <b></b> <a href="bus booking in details">View In Deatils</a></b>
+   <b></b> <a href="bus booking in details">View In Details</a></b>
 <header><section id="contact">
     <h2 style="color: #272325;">Contact Me</h2></header>
     <p> You can Also Contact me Directly Throuh:<br></p>
