--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <img src="profile photo.jpg" alt="Profile Picture">
 </div>
 <h2>Personal Infromation</h2>
-    
+<a href="personal infromation.html">See Personal Ifromation</a>
 
     <p>I am a passionate web developer...</p>
     <p>I have skills in dfferent fields which includes:</p>
