--- a/personal infromation.html
+++ b/personal infromation.html
@@ -54,14 +54,14 @@ button:hover {
 <div class="container">
     <h1>Personal Information</h1>
     <div class="info">
-        <p><strong>Name:</strong> Mercyline Mbeyu Kahindi</p>
-        <p><strong>Email:</strong> mercylinembeyu202@gmail.com</p>
-        <p><strong>Gender:</strong> Female</p>
-        <p><strong>Date of Birth:</strong> 28/2/2003</p>
-        <p><strong>Place of Birth:</strong> Malindi</p>
-        <p><strong>Marital Status:</strong> Single</p>
+        <p><strong>Name:</strong> Mercyline Mbeyu Kahindi</p><br>
+        <p><strong>Email:</strong> mercylinembeyu202@gmail.com</p><br>
+        <p><strong>Gender:</strong> Female</p><br>
+        <p><strong>Date of Birth:</strong> 28/2/2003</p><br>
+        <p><strong>Place of Birth:</strong> Malindi</p><br>
+        <p><strong>Marital Status:</strong> Single</p><br>
     </div>
-    <button id="view-details-btn">View Personal Information</button>
+    
 </div>
 
 <script>
