--- a/index.html
+++ b/index.html
@@ -119,6 +119,63 @@
 </div>
 <h2>Personal Infromation</h2>
 <H3>Biography</H3>
+<style>
+    .container {
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .button-container {
+        position: relative;
+        display: inline-block;
+        overflow: hidden;
+    }
+    .glow {
+        position: absolute;
+        top: -30px;
+        left: -30px;
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.3);
+        animation: glowing 1.5s infinite alternate;
+    }
+    @keyframes glowing {
+        0% {
+            transform: scale(0.5);
+            box-shadow: 0 0 20px #fff;
+        }
+        100% {
+            transform: scale(1.5);
+            box-shadow: 0 0 50px #fff;
+        }
+    }
+    button {
+        padding: 15px 30px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    button:hover {
+        background-color: #45a049;
+    }
+    <div class="container">
+    <h2>Click the Button to View Biography</h2>
+    <div class="button-container">
+        <div class="glow"></div>
+        <button onclick="openBiography()">View Biography</button>
+    </div>
+    <iframe id="biographyFrame" src="" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<script>
+    function openBiography() {
+        document.getElementById("biographyFrame").src = "biography.html"; 
+</script>
 <a href="personal infromation.html">See Personal Ifromation</a>
 
     <p>I am a passionate web developer...</p>
