--- a/index.html
+++ b/index.html
@@ -163,20 +163,10 @@
     button:hover {
         background-color: #45a049;
     }
-    <div class="container">
-    <h2>Click the Button to View Biography</h2>
-    <div class="button-container">
-        <div class="glow"></div>
-        <button onclick="openBiography()">View Biography</button>
-    </div>
-    <iframe id="biographyFrame" src="" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<script>
-    function openBiography() {
-        document.getElementById("biographyFrame").src = "biography.html"; 
-</script>
+    
+</style>
 <a href="personal infromation.html">See Personal Ifromation</a>
+
     <p>I am a passionate web developer...</p>
     <p>I have skills in dfferent fields which includes:</p>
 
