--- a/index.html
+++ b/index.html
@@ -119,52 +119,9 @@
 </div>
 <h2>Personal Infromation</h2>
 <H3>Biography</H3>
-<style>
-    .container {
-        max-width: 600px;
-        margin: 0 auto;
-        text-align: center;
-    }
-    .button-container {
-        position: relative;
-        display: inline-block;
-        overflow: hidden;
-    }
-    .glow {
-        position: absolute;
-        top: -30px;
-        left: -30px;
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        background-color: rgba(255, 255, 255, 0.3);
-        animation: glowing 1.5s infinite alternate;
-    }
-    @keyframes glowing {
-        0% {
-            transform: scale(0.5);
-            box-shadow: 0 0 20px #fff;
-        }
-        100% {
-            transform: scale(1.5);
-            box-shadow: 0 0 50px #fff;
-        }
-    }
-    button {
-        padding: 15px 30px;
-        background-color: #4caf50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-    button:hover {
-        background-color: #45a049;
-    }
-    
-</style>
+<p> My <b>Biography</b> gives a brief explantaionation about me on <b>Background,Education,Career,</b>and <b>Achievements.</b>
+<br>Take time to view my Biography</p>
+<a href="biography.html" class="view-project-details" style="display: inline-block; padding: 5px 10px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">View Biography</a>
 <a href="personal infromation.html">See Personal Ifromation</a>
 
     <p>I am a passionate web developer...</p>
