--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
 
     <img src="profile photo.jpg" alt="Profile Picture">
 </div>
-<h2>Personal Infromation</h2>
+
 <H3>Biography</H3>
 <p> My <b>Biography</b> gives a brief explantaionation about me on <b>Background,Education,Career,</b>and <b>Achievements.</b>
 <br>Take time to view my Biography</p>
 <a href="biography.html" class="view-project-details" style="display: inline-block; padding: 5px 10px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">View Biography</a>
-<a href="personal infromation.html">See Personal Ifromation</a>
+<br><h2>Personal Infromation</h2>
+If you want to get to know me well, Here we go:
+<br<a href="personal infromation.html">See Personal Ifromation</a>
 
     <p>I am a passionate web developer...</p>
     <p>I have skills in dfferent fields which includes:</p>
