--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <p> My <b>Biography</b> gives a brief explantaionation about me on <b>Background,Education,Career,</b>and <b>Achievements.</b>
 <br>Take time to view my Biography</p>
 <a href="biography.html" class="view-project-details" style="display: inline-block; padding: 5px 10px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">View Biography</a>
+<iframe src="biography.html" frameborder="0" width="100%" height="800px">see</iframe>
 <br><h2>Personal Infromation</h2>
 If you want to get to know me well, Here we go:
 <br<a href="personal infromation.html">See Personal Ifromation</a>
