--- a/biography.html
+++ b/biography.html
@@ -57,15 +57,15 @@
     <div class="section">
         <h2>Education</h2>
         <p>I began schooling at the age of four years and the Early childhood Education(ECDE) level. I layed, a good foundations for my academics, worked hard and achieved a good grade in <B>KCPE</B> in primary level as well as <B>KCSE</B> in highschool level.
-        <br> I joined the university levelof education ad Pursued Bachelors in Education science; <b>Mathematics and computer studies</b> </p>
+        <br> I joined the university level of education ad Pursued Bachelors in Education science; <b>Mathematics and computer studies</b> </p>
     </div>
     <div class="section">
         <h2>Career</h2>
-        <p>I am an academician who is knowlegeable in dofferent career fields.<br>including programming, teaching, webdesign and many more technology related fields.</p>
+        <p>I am an academician who is knowlegeable in different career fields.<br>including programming, teaching, webdesign and many more technology related fields.</p>
     </div>
     <div class="section">
         <h2>Achievements</h2>
-        <p>In my carrer, have achieved alot of milestones in both curriculum i.e Academic competions like prrojects and contests and co-currculum activities partclarly games and other competitions </p>
+        <p>In my carrer, have achieved alot of milestones in both curriculum i.e Academic competions like projects and contests and co-currculum activities partclarly games and other competitions </p>
     </div>
 </div>
 
