--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mbeyu- projects</title>
-    <link rel="stylesheet" href="../MBEYU WEB PROJECT/styles.css">
+    <link rel="stylesheet" href="../web-technologies/styles.css">
     <script src="main.js" defer></script>
 </head>
 <body>
