--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <br><h2>Personal Infromation</h2>
     If you want to get to know me well, Here we go:
     <br>
-    <a href="c:personal infromation.html">See Personal Ifromation</a>
+    <a href="personal infromation.html" class="view-details" style="display: inline-block; padding: 5px 10px; background-color: #ff6600; color: #0e0101; text-decoration: none; border-radius: 5px;">See Personal information</a>
     
         <p>I am a passionate web developer...</p>
         <p>I have skills in dfferent fields which includes:</p>
