--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         }
         
         </style>
+        <div class="projects">
+            <h3><p class = "caption">Guess te number</p></h3>
+        <img src="project1.png" alt="Guess the number and have fun" style="width: 150px; height: 150px; margin-right: 20px; border: 1px solid #ccc;">
+        <h3> <p class="caption">Online Bus Booking</p></h3>
+        <img src="project2.webp" alt="Book your bus from remote" style="width: 150px; height: 150px; margin-right: 20px; border: 1px solid #ccc;">
+        <h3> <p class="caption">Word Scramble</p></h3>
+        <img src="project3.jpg" alt="Scramble the words" style="width: 150px; height: 150px; margin-right: 20px; border: 1px solid #ccc;">
+     </div>
+    </div>
+    </section>
         <div class="container">
             <ul id="projects-list">
                 <li>Project 1:Guess the number game</li>
