--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <ul id="projects-list">
                 <li>Project 1:Guess the number game</li>
                 <li>Project 2: Online Bus Booking System</li>
+                <li>Project 3:Scramble wors game</li>
         <h1>Welcome to Mbeyu's web based porfolio</h1>
         <p>Discover my skills and projects, learn, we can go ahead to share some experiece, it would be fun</p>
         <a href="projects.html" class="cta-button">Go ahead to see projects</a>
